--- a/styles/scss/components/hubspot-modules/gallery.scss
+++ b/styles/scss/components/hubspot-modules/gallery.scss
@@ -46,9 +46,6 @@
 	-webkit-box-shadow: 0 2px 20px #D9DFF0;
 }
 
-@mixin transition {
-	transition: all 300ms ease;
-}
 
 @mixin grid {
   position: relative;
@@ -87,12 +84,6 @@
     @content;
   }
 }
-
-
-// Variables 
-$border-color: #DFEAEE;
-$red:		       #F01834;
-$dark-red:     #C30019;
 
 
 /* ============================================================
@@ -155,7 +146,7 @@ $dark-red:     #C30019;
 
     	select {
     		height: 2.3125rem;
-    		border-color: $border-color;
+    		border-color: color(border);
     		font-weight: bold;
 
     		&:after {
@@ -180,11 +171,28 @@ $dark-red:     #C30019;
     height: 42px;
     line-height: 42px;
     box-shadow: none;
-    border-color: $border-color;
+    border-color: color(border);
     margin-bottom: 0;
+    border: 1px solid color(border);
+    padding: .8rem;
+    background-color: #fff;
+    color: color(text, base);
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 1rem;
+    font-family: family(body);
+    box-sizing:border-box;
+    // overrides hubspots width
+    width: 100% !important;
+    height: px-to-rem(45px);
+    @include transition(all 300ms ease);
+
+    &:focus {
+      outline: none;
+    }
 
     @include input-placeholder {
-    	color: #787878;
+    	color: color(gray, base);
     }
 }
 
@@ -216,7 +224,7 @@ $dark-red:     #C30019;
 }
 
 .gallery__filter-card {
-	border: 1px solid $border-color;
+	border: 1px solid color(border);
 	border-radius: 3px;
 	margin-top: 20px;
 }
@@ -238,7 +246,7 @@ $dark-red:     #C30019;
 	display: flex;
 	align-items: center;
 	font-size: 13px;
-	color: $red;
+	color: color(primary, base);
 
 	&:hover {
 		cursor: pointer;
@@ -248,7 +256,7 @@ $dark-red:     #C30019;
 .gallery__filter-card--body {
 
 	padding: 0 20px 14px;
-	border-top: 1px solid $border-color;
+	border-top: 1px solid color(border);
 	form {
 		// overrides default styling
 		@include form-override;
@@ -278,6 +286,7 @@ $dark-red:     #C30019;
 .gallery__img-container {
   @include grid;
   width: 75%;
+  overflow: hidden;
 
   @include tablet {
     width: 60% !important;
@@ -299,7 +308,7 @@ $dark-red:     #C30019;
 	justify-content: space-between;
 
 	.gallery__img--card {
-		border: 1px solid $border-color;
+		border: 1px solid color(border);
 		flex-basis: 31%;
 		width: 31%;
 		margin-bottom: 20px;
@@ -353,16 +362,16 @@ $dark-red:     #C30019;
 		// &:before {
 		// 	transform: scale3d(0, 1, 1);
 		// 	transform-origin: left top;
-		// 	border-top: 1px solid $red;
-		// 	border-bottom: 1px solid $red;
+		// 	border-top: 1px solid color(primary, base);
+		// 	border-bottom: 1px solid color(primary, base);
 		// 	border-radius: 3px;
 		// }
 
 		// &:after {
 		// 	transform: scale3d(1, 0, 1);
 		// 	transform-origin: right top;
-		// 	border-right: 1px solid $red;
-		// 	border-left: 1px solid $red;
+		// 	border-right: 1px solid color(primary, base);
+		// 	border-left: 1px solid color(primary, base);
 		// 	border-radius: 3px;
 		// }
 
@@ -432,11 +441,14 @@ $dark-red:     #C30019;
 	.gallery__img--props {
 		list-style: none;
 		margin-left: 0;
-		font-size: 13px;
-		margin-bottom: 0;
+		font-size: px-to-rem(13px);
+    margin-bottom: 0;
+    padding-left: 0;
 
 		li {
-			padding-bottom: 9px;
+      padding-bottom: 9px;
+      margin: 0;
+      line-height: 1;
 
 			&:last-child {
 				padding-bottom: 0;
@@ -457,7 +469,7 @@ $dark-red:     #C30019;
 $font_size: 14px !default;
 $font_size_small: 12px !default;
 
-$input_border_radius: 3px !default;
+$input_border_radius: 0;
 $input_height: 42px !default;
 $input_height_small: 36px !default;
 $dropdown_padding: 18px !default;
@@ -475,7 +487,7 @@ $arrow_color: $gray !default;
   background-color: #fff;
   font-weight: bold;
   border-radius: $input_border_radius;
-  border: solid 1px $border-color; 
+  border: solid 1px color(border); 
   box-sizing: border-box;
   clear: both;
   cursor: pointer;
@@ -495,15 +507,15 @@ $arrow_color: $gray !default;
   white-space: nowrap;
   width: auto;
   &:hover {
-    border-color: darken($border-color, 5%);
+    border-color: darken(color(border), 5%);
   }
   &:active, &:focus {
     border-color: $primary_light;
   }
   // Arrow
   &:after { 
-   border-bottom: 3px solid $red;
-    border-right: 3px solid $red;
+   border-bottom: 3px solid color(primary, base);
+    border-right: 3px solid color(primary, base);
     content: '';
     display: block;
     height: 8px;
@@ -657,16 +669,16 @@ $arrow_color: $gray !default;
     -webkit-appearance: none;
     height: 32px;
     line-height: 32px;
-    background: $red;
+    background: color(primary, base);
     color: #fff;
     opacity: 1;
-    @include transition;
+    @include transition(all 300ms ease);
     float: right; 
     margin: 7px 2px 2px;
     padding: 0 10px;
 
     &:hover {
-      background: $dark-red;
+      background: color(primary, dark);
     }
   }
 
